plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.jaehyun'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

jar {
	enabled = false
}

repositories {
	mavenCentral()
}

dependencies {
//	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.projectlombok:lombok'
	implementation 'com.mysql:mysql-connector-j:8.0.32'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.32'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.apache.httpcomponents:httpclient:4.5.13'


	//jwt 로그인
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	//swagger
    implementation "io.springfox:springfox-boot-starter:3.0.0"
    implementation "io.springfox:springfox-swagger-ui:3.0.0"

	//lombok
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.projectlombok:lombok'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
}

tasks.named('test') {
	useJUnitPlatform()
}
